@@ -3,11 +3,15 @@ buildscript {
 
     repositories {
         jcenter()
+        gradlePluginPortal()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://sandec.bintray.com/repo" }
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
+        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.3'
+        classpath 'org.openjfx:javafx-plugin:0.0.9'
     }
 }
 
@@ -20,8 +24,11 @@ plugins {
     id 'org.openjfx.javafxplugin' version "$javafx_plugin_version"
 }
 
+apply plugin: 'java'
+apply plugin: 'application'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.sandec.jpro'
 
 repositories {
     // Use JCenter for resolving dependencies.
@@ -56,10 +63,19 @@ dependencies {
 }
 
 group 'org.bibletranslationtools'
+mainClassName = 'org.bibletranslationtools.demo.JProApp'
 
 javafx {
     version = "$javafx_version"
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web']
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--add-opens', 'javafx.graphics/javafx.scene=tornadofx'
+        ]
+    }
 }
 
 sourceCompatibility = 11
@@ -70,4 +86,15 @@ compileKotlin {
 
 compileTestKotlin {
     kotlinOptions.jvmTarget = "11"
+}
+
+jpro {
+    // for debugging
+    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
+
+    JVMArgs << '-Xmx1000m'
+
+    //jpro server port
+    port = 8080
+
 }
